--- a/styles/globals.css
+++ b/styles/globals.css
@@ -25,9 +25,18 @@ h3 {
 .home3left {
   padding-top: 170px;
 }
-#contact input {
+#contact input,
+#contact textarea {
   border-bottom: solid 1px #000;
 }
 #contact button {
   font-size: 18px;
+}
+.formMsg {
+  text-align: center;
+  font-size: 20px;
+  padding-bottom: 30px;
+  color: green;
+  font-style: italic;
+  font-weight: 600;
 }
