--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,6 +14,8 @@
 .max460 {
   max-width: 460px;
   margin: 0 auto;
+  padding-left: 15px;
+  padding-right: 15px;
 } 
 .home3 svg {
   width: 40px;
@@ -22,8 +24,8 @@ h3 {
   font-size: 22px;
   font-weight: 400;
 }
-.home3left {
-  padding-top: 170px;
+.home4 {
+  align-items: center;
 }
 #contact input,
 #contact textarea {
@@ -55,8 +57,101 @@ div#section2 {
   font-weight: 600;
 }
 div#contact {
-  padding: 130px 0;
+  padding: 130px 15px;
 }
 html {
   scroll-behavior: smooth;
+}
+div#mobile-menu {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  background: #fff;
+  height: 1000%;
+  padding-top: 100px;
+}
+div#mobile-menu a {
+  display: block;
+  width: auto;
+  font-size: 20px;
+  line-height: 2em;
+  padding: 10px 0;
+  font-weight: 500;
+}
+/* @media only screen and (max-width: 600px) {
+.menuHidden.menu-items.open {
+  display: block;
+  top:60px;
+}
+} */
+
+
+button.dropdown-button.active svg.block {
+    display: none;
+}
+
+button.dropdown-button.active svg.hidden {
+    display: block;
+}
+div#banner {
+  padding: 70px 15px;
+}
+.home2 {
+  padding-bottom: 154px;
+  padding-left:15px;
+  padding-right:15px;
+}
+.home3 {
+  align-items: center;
+}
+h3 {
+  font-size: 18px;
+  font-weight: 400;
+}
+.font15 {
+  font-size: 15px;
+}
+
+@media only screen and (max-width: 980px) {
+.logo {  
+  display: flex;
+}
+.logo .text-center.my-3 {
+  padding-top: 20px;
+}
+.font72 {
+  font-size: 38px;
+}
+.font40 {
+  font-size: 28px;
+}
+.pt-20 {
+  padding-top: 3rem;
+}
+body .home2 {
+  padding-bottom: 70px;
+}
+.home3 {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  flex-direction: column-reverse;
+  padding-left:15px;
+  padding-right:15px;
+  
+}
+.home3 .column-left {
+  width: 100%;
+  padding-top: 50px;
+  padding-bottom: 90px;
+}
+.home4 {
+  display: block;
+}
+body .pt-28 {
+  padding-top: 2rem;
+}
+div#contact {
+  padding: 100px 15px 70px 15px;
+}
 }
